ecmascript/parser/tests/test262-error-references/fail/42cb3f2a38cb2930.js.stderr
error: Unexpected token `]`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/42cb3f2a38cb2930.js:2:3
  |
2 | */]
  |   ^

